--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -34,14 +35,14 @@ body {
 }
 
 .produtos {
-    margin-top: 67px;
+    margin-top: 189px;
 }
 
 .titulo {
     text-align: center;
     font-size: 49px;
     font-weight: normal;
-    margin-bottom: 19px;
+    margin-bottom: 74px;
 }
 
 .linha {
@@ -72,4 +73,8 @@ body {
     box-sizing: border-box;
     margin: 0px auto 25px auto;
     border-radius: 15px;
+}
+
+.contato {
+    margin-top: 189px;
 }
